--- a/Documentation/User Manual/src/m32_user-Manual.adoc
+++ b/Documentation/User Manual/src/m32_user-Manual.adoc
@@ -494,6 +494,75 @@ It mostly works like the Generator mode concerning preferences. The main differe
 * Tapping the right paddle will uncover the word just sent and pause until you tap the right paddle again.
 
 
+=== Morse Tennis
+
+This is a game for two players. The basic idea is that they throw words at each other and the receiving party has to repeat the word they just received. It's a bit like a cross between Echo Trainer and Tetris for two players. If the word is repeated correctly, the receiver scores. To make it a bit harder to send random garbage of epic length, the sender has to repeat the word to send themselves in order for it to get sent.
+
+
+==== Basic play
+
+In order to establish a game, both players have to enter the Morse Tennis mode. One has to send cq, the other one has to reply.
+The cq call is "cq de <yourcall>" with "<yourcall>" replaced by this player's call sign (or any handle to be used in the game). If this message is given correctly, it will be sent to the other player who can reply to the call by sending "<yourcall> de <mycall>", with (no surprise here) "<mycall>" replaced by the second players call or handle. The first player has to acknowlege this reply by sending "<mycall> de <yourcall>" themselves and the game commences.
+
+An example for a game establishing sequence in which the first player uses the handle "tom" and the second player uses "pa" would be
+
+. cq de tom
+. tom de pa
+. pa de tom
+
+Along with the opening cq call, the game options of the player calling cq are transmitted so that both players are on the same page regarding the game setup.
+
+After this initial handshake, the players take turns. The one who initiated the game by calling cq is the first to send a word. As already mentioned, the word has to be given two times in a row to get sent. If the sending player manages this feat, the receiver has to repeat the word. If this is okay, the receiver gets a point. In any case, after one attempt at giving the word the second player just received, it's the second player's turn to send a challenge to the first player by giving the word to send twice in a row.
+
+
+An example for the midgame is:
+
+. tom gives "foo fo", nothing happens
+. tom gives "foo foo", "foo" is sent to pa
+. pa receives "foo" and keys "foo", scoring one point
+. pa now gives "bar bar", sending "bar" to tom.
+. tom receives "bar" and keys "baa", failing to score.
+
+In each case, the Morserino will send the expected message when it is recognized correctly at the end of the words keyed by a player. There is no need to <err> out a mistake, just try to send the message again. In the following example, tom tries to send his cq call but fails to do so in the first two attempts:
+
+. cq di cc cq de tom ("cq de tom" is sent)
+
+Similar, when tasked with sending a word two times in a row, the following would lead to "baz" being sent:
+
+. baz bag d bw baz baz
+
+The message is sent as soon as the input ends in the same word twice in a row.
+
+
+==== Advanced play
+
+The above game play is primarily intended for beginners. For players interested in stricter adherence to the way morse QSOs are handled, there are two other message sets to be chosen from: "Intermediate" and "Hardcore". These options affect how messages expected in the game should be given. I'll explain how these options work in the following two examples.
+
+Intermediate:
+
+. tom sends: cq cq cq de tom tom tom <ar>
+. pa sends: tom de pa k
+. tom sends: pa de tom k (the game commences at this point)
+. tom sends: foo foo (sending "foo" to pa)
+. pa sends: foo (scoring)
+
+Hardcore:
+
+. tom sends: cq cq cq de tom tom tom <ar>
+. pa sends: tom de pa k
+. tom sends: pa de tom k 
+. tom sends: pa de tom foo foo k 
+. pa sends: tom de pa foo 
+
+There is also an option that switches the scoring method to cooperative. In this mode, both sender and receiver score a point when the receiver manages to key the word correctly. Since this scoring is a strong incentive to just send "e" back and forth, at least one player should try to sneak in a more difficult word from time to time when the [line-through]#kid# other player seems receptive to it.
+
+
+
+==== Ending and restarting
+
+Players who would like to leave the game can give "<sk>". Restarting an ended game is done giving "<ka>".
+
+
 === Transceiver
 
 There are two transceiver modi in the Morserino-32. The first one is a self contained transceiver for communication with Morse code, using LoRa spread spectrum radio technology (in the standard version on the 433 MHz band, but versions  for 868 and 920 MHz bands are available). The other is a transceiver mode that can be used either with an external transceiver (e.g. a shortwave amateur radio transceiver) or with a protocol like iCW (CW over Internet). In both cases the CW Keyer and a CW Decoder are active at the same time.
